noinst_LIBRARIES = libshared.a

libshared_a_SOURCES = binbuffer.cpp bthread.cpp cfile.cpp cstring.cpp datafile.cpp datamanager.cpp dataobject.cpp generalmatrix.cpp generalvector.cpp glbfile.cpp hello.cpp ipnumber.cpp lconfig.cpp matrix.cpp timer.cpp usmisc.cpp vector.cpp
INCLUDES = -I$(top_srcdir)/intl $(all_includes)

EXTRA_DIST = binbuffer.cpp binbuffer.h bthread.cpp bthread.h cfile.cpp cfile.h cstring.cpp cstring.h datafile.cpp datafile.h datamanager.cpp datamanager.h dataobject.cpp dataobject.h filecontrol.h generalmatrix.cpp generalmatrix.h generalvector.cpp generalvector.h glbfile.cpp glbfile.h hello.cpp hello.h lconfig.cpp lconfig.h matrix.cpp matrix.h pi.h timer.cpp timer.h usmisc.cpp usmisc.h vector.cpp vector.h

