stuntsdir=@stuntsdir@

bin_SCRIPTS = ultimatestunts.sh
stunts_DATA = ultimatestunts.conf textures.dat
EXTRA_DIST = ultimatestunts.conf textures.dat ultimatestunts.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO ultimatestunts.lsm 

CFLAGS=-Wall

AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = data shared simulation graphics stuntsserver stuntsai stunts3dedit trackedit ultimatestunts
