noinst_LIBRARIES = libgraphics.a

libgraphics_a_SOURCES = console.cpp background.cpp font.cpp graphobj.cpp graphicworld.cpp gui.cpp guipage.cpp image.c inputbox.cpp lodtexture.cpp menu.cpp messagebox.cpp reflection.cpp renderer.cpp texture.cpp widget.cpp winsystem.cpp
INCLUDES = $(all_includes) -I../shared -I../simulation

EXTRA_DIST = console.cpp console.h background.cpp background.h camera.h font.cpp font.h graphicworld.cpp graphicworld.h graphobj.cpp graphobj.h gui.cpp gui.h guipage.cpp guipage.h image.c image.h inputbox.cpp inputbox.h lodtexture.cpp  lodtexture.h menu.cpp menu.h messagebox.cpp messagebox.h reflection.cpp reflection.h renderer.cpp renderer.h texture.cpp texture.h widget.cpp widget.h winsystem.cpp winsystem.h

