noinst_LIBRARIES = libgraphics.a

libgraphics_a_SOURCES = background.cpp colorselect.cpp console.cpp \
				dashboard.cpp dynamicreflection.cpp dynamicshadow.cpp fileselect.cpp font.cpp \
				glextensions.cpp graphobj.cpp graphicworld.cpp gui.cpp guipage.cpp image.c inputbox.cpp \
				lodtexture.cpp longmenu.cpp menu.cpp messagebox.cpp objectviewer.cpp reflection.cpp \
				renderer.cpp renderwidget.cpp staticreflection.cpp texture.cpp widget.cpp \
				winsystem.cpp iconlist.cpp iconbar.cpp label.cpp mousecursor.cpp objectviewwidget.cpp
INCLUDES = -I$(top_srcdir)/intl -I$(top_srcdir)/shared \
	-I$(top_srcdir)/simulation $(all_includes)

EXTRA_DIST = background.cpp background.h camera.h colorselect.cpp colorselect.h console.cpp console.h dashboard.cpp dashboard.h dynamicreflection.cpp dynamicreflection.h dynamicshadow.cpp dynamicshadow.h fileselect.cpp fileselect.h font.cpp font.h glextensions.cpp glextensions.h graphicworld.cpp graphicworld.h graphobj.cpp graphobj.h gui.cpp gui.h guipage.cpp guipage.h image.c image.h inputbox.cpp inputbox.h lodtexture.cpp  lodtexture.h longmenu.cpp  longmenu.h menu.cpp menu.h messagebox.cpp messagebox.h objectviewer.cpp objectviewer.h reflection.cpp reflection.h renderer.cpp renderer.h renderwidget.cpp renderwidget.h staticreflection.cpp staticreflection.h texture.cpp texture.h widget.cpp widget.h winsystem.cpp winsystem.h

noinst_HEADERS = iconlist.h iconbar.h label.h mousecursor.h objectviewwidget.h
