noinst_LIBRARIES = libshared.a

libshared_a_SOURCES = binbuffer.cpp cfile.cpp cstring.cpp datafile.cpp hello.cpp lconfig.cpp matrix.cpp timer.cpp vector.cpp ipnumber.cpp


EXTRA_DIST = binbuffer.cpp binbuffer.h cfile.cpp cfile.h cstring.cpp cstring.h datafile.cpp datafile.h filecontrol.h hello.cpp hello.h lconfig.cpp lconfig.h matrix.cpp matrix.h timer.cpp timer.h vector.cpp vector.h

