noinst_LIBRARIES = libsimulation.a

libsimulation_a_SOURCES = aiplayercar.cpp bound.cpp car.cpp carinput.cpp clientnet.cpp clientplayercontrol.cpp clientsim.cpp collisiondata.cpp dynamicobject.cpp message.cpp messagebuffer.cpp movingobject.cpp movobjinput.cpp netmessage.cpp objectchoice.cpp physics.cpp player.cpp playercontrol.cpp rulecontrol.cpp shape.cpp simulation.cpp world.cpp netudp.cpp
INCLUDES = $(all_includes) -I../shared

EXTRA_DIST = aiplayercar.cpp aiplayercar.h bound.cpp bound.h car.cpp car.h carinput.cpp carinput.h clientnet.cpp clientnet.h clientplayercontrol.cpp clientplayercontrol.h clientsim.cpp clientsim.h collisiondata.cpp collisiondata.h dynamicobject.cpp dynamicobject.h material.h message.cpp message.h messagebuffer.cpp messagebuffer.h movingobject.cpp movingobject.h movobjinput.cpp movobjinput.h netmessage.cpp netmessage.h objectchoice.cpp objectchoice.h physics.cpp physics.h player.cpp player.h playercontrol.cpp playercontrol.h rulecontrol.cpp rulecontrol.h shape.cpp shape.h simulation.cpp simulation.h world.cpp world.h

